add changes after first review

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -110,6 +110,10 @@ functions:
         Action:
           - s3:*
         Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*
+      - Effect: Allow
+        Action:
+          - dynamodb:UpdateItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 custom:
   serverless-offline:
     httpPort: 3000
